// protoのバージョン
syntax = "proto3";
// メッセージ型などの名前の衝突を避けるためにパッケージ名を指定
package user;
// コードが自動生成されるディレクトリを指定
option go_package = "pb/";
// 他パッケージのメッセージ型をimportできる
import "google/protobuf/timestamp.proto";

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message User {
  string UserId = 1;
  string Name = 2;
  string Email = 3;
  google.protobuf.Timestamp Birthday = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message ListUsersRequest {
  int64 page = 1;
  int64 page_size = 2;
}
message ListUsersResponse {
  repeated User users = 1;
}
message CreateUserRequest {
  string Name = 1;
  string Email = 2;
  google.protobuf.Timestamp Birthday = 3;
}
message CreateUserResponse {
  User user = 1;
}